--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 slack_engin.py
+stockFile/새 텍스트 문서.txt
+stockFile/kwak_MyDeposit_무매_45.tsv
+stockFile/kwak_MyDeposit_ava1_24.tsv
+stockFile/kwak_MyDeposit_ava2_23.tsv
+stockFile/kwak_MyDeposit_ava3_62.tsv
+stockFile/kwak_MyDeposit_TLP1_04.tsv
+stockFile/kwak_MyRevenue_ava1_24.tsv
+stockFile/kwak_mystockdata_무매_45.tsv
+stockFile/kwak_mystockdata_ava1_24.tsv
+stockFile/kwak_mystockdata_ava2_23.tsv
+stockFile/kwak_mystockdata_ava3_62.tsv
+stockFile/kwak_mystockdata_TLP1_04.tsv
