--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ stockFile/kwak_mystockdata_ava2_23.tsv
 stockFile/kwak_mystockdata_ava3_62.tsv
 stockFile/kwak_mystockdata_TLP1_04.tsv
 passdoc/pw.py
+stockFile/*.*
+stockFile/*.tsv
